bpk-lib/crates/macbat/macros/tests/trybuild_negative/operation_list_not_array.stderr
error: expected an array of string literals
 --> tests/trybuild_negative/operation_list_not_array.rs:9:20
  |
9 |     reads_events = "notarray"
  |                    ^^^^^^^^^^
